# gores_trainer

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/: default_config.toml
html/: gores_trainer.wasm  index.html  mq_js_bundle.js
src/: main.rs  scene.rs  timestep.rs
