[package]
name = "gores_trainer"
version = "0.5.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1.12"
macroquad = "0.3.15"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"

[features]
